--- a/demo1.html
+++ b/demo1.html
@@ -88,7 +88,7 @@
     </div>
     <div class="surya">
     <img src="surya.jpg" alt=""  width="60px" height="200px" class="actors-images">
-    <h3>SURYA</h3>
+    <h3>SURYA...</h3>
     <p>
         Lorem ipsum dolor sit amet consectetur adipisicing elit. Ad cupiditate molestiae, expedita repellendus commodi earum modi incidunt at laborum! Cum temporibus velit ipsa saepe. Eligendi, at inventore? Eum, velit maxime?
     </p>
